syntax = "proto3";

package erynoa.v1;

option go_package = "erynoa/v1;erynoav1";

import "google/protobuf/timestamp.proto";

// UserService provides user management operations
service UserService {
  // List returns all users (requires authentication)
  rpc List(ListRequest) returns (ListResponse);
  
  // Get returns a single user by ID
  rpc Get(GetRequest) returns (GetResponse);
  
  // GetCurrent returns the current authenticated user
  rpc GetCurrent(GetCurrentRequest) returns (GetCurrentResponse);
  
  // Create creates a new user
  rpc Create(CreateRequest) returns (CreateResponse);
  
  // Update updates an existing user
  rpc Update(UpdateRequest) returns (UpdateResponse);
  
  // Delete removes a user
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ListRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListResponse {
  repeated User users = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message GetRequest {
  string id = 1;
}

message GetCurrentRequest {}

message GetResponse {
  User user = 1;
}

message GetCurrentResponse {
  User user = 1;
}

message CreateRequest {
  string email = 1;
  string name = 2;
  string role = 3;
}

message CreateResponse {
  User user = 1;
}

message UpdateRequest {
  string id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string role = 4;
}

message UpdateResponse {
  User user = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}
