syntax = "proto3";

package godstack.v1;

option go_package = "godstack/v1;godstackv1";

// InfoService provides application configuration
service InfoService {
  // GetInfo returns public configuration for clients
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
}

message GetInfoRequest {}

message GetInfoResponse {
  string version = 1;
  string environment = 2;
  AuthConfig auth = 3;
  UrlConfig urls = 4;
  FeatureFlags features = 5;
}

message AuthConfig {
  string issuer = 1;
  string client_id = 2;
}

message UrlConfig {
  string frontend = 1;
  string api = 2;
}

message FeatureFlags {
  bool registration = 1;
  bool social_login = 2;
}
